# googleMCP

./: .gitignore  README.md  requirements.txt  toDos
src/: README.md  __init__.py  basic_fastmcp_server.py  fast_sheets_server.py  pyproject.toml  stop_fast_mcps.sh  test_basic_client.py  test_sheets_server.py
src/mcp_google_calendar/: __init__.py
src/mcp_google_docs/: __init__.py
src/mcp_google_drive/: __init__.py
src/mcp_google_gmail/: __init__.py
src/mcp_google_meet/: __init__.py
src/mcp_google_shared/: __init__.py  auth.py
src/mcp_google_sheets/: __init__.py  __main__.py  server.py
